NXP-29984: migrate RelationService to use xmap registries